--- a/cars/index.html
+++ b/cars/index.html
@@ -52,8 +52,7 @@
                             <div class="col-lg-5"><a href="/cars/2020-EV"><img class="rounded img-fluid" src="/assets/img/cars/IC-1.jpg"></a></div>
                             <div class="col-lg-7">
                                 <h3>2020 EV</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
-                                    vitae leo.</p>
+                                <p>Columbia University Formula Racing is excited to be introducing our first electric vehicle this year! After over a year of hard work, our team is looking forward to competing in the EV competition at FSAE North this summer of 2020. </p>
                             </div>
                         </div>
                     </div>
@@ -62,8 +61,7 @@
                             <div class="col-lg-5"><a href="/cars/2020-IC"><img class="rounded img-fluid" src="/assets/img/cars/2018.jpg"></a></div>
                             <div class="col-lg-7">
                                 <h3>2020 IC</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
-                                    vitae leo.</p>
+                                <p>In addition to our electric vehicle, Columbia University Formula Racing is also continuing its legacy of building ICE cars. We are currently preparing to compete again in FSAE Michigan and are excited for another fun and educational year of building racecars!</p>
                             </div>
                         </div>
                     </div>
