--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <p>Our mission is to educate and develop the next generation of engineers and managers while building a racecar for the Formula SAE competition. The design, construction, and financing of the car provides students with an introduction
                                 to all aspects of project and engineering management. By applying theoretical principles to real-world problems, team members develop collaborative problem-solving skills.</p>
                         </div>
-                        <button class="btn btn-outline-light text-black-50" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000" type="button"><a class="text-white" href="https://forms.gle/NNNhkBxCukYZ5zoz7" style="color: rgba(185,217,235,0.8);opacity: 1;">About us</a></button></div>
+                        <button class="btn btn-outline-light text-black-50" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000" type="button"><a class="text-white" href="https://forms.gle/NNNhkBxCukYZ5zoz7" style="color: rgb(207,207,207);opacity: 1;">About us</a></button></div>
                          
                     </div>
                 </div>
