--- a/cars/index.html
+++ b/cars/index.html
@@ -49,7 +49,7 @@
                 <div class="block-content">
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><a href="/cars/2020-EV"><img class="2020-EV" src="/assets/img/cars/IC-1.jpg"></a></div>
+                            <div class="col-lg-5"><a href="/cars/2020-EV"><img class="rounded img-fluid" src="/assets/img/cars/IC-1.jpg"></a></div>
                             <div class="col-lg-7">
                                 <h3>2020 EV</h3>
                                 <p>Columbia University Formula Racing is excited to be introducing our first electric vehicle this year! After over a year of hard work, our team is looking forward to competing in the EV competition at FSAE North this summer of 2020. </p>
@@ -58,7 +58,7 @@
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><a href="/cars/2020-IC"><img class="2020-IC" src="/assets/img/cars/2018.jpg"></a></div>
+                            <div class="col-lg-5"><a href="/cars/2020-IC"><img class="rounded img-fluid" src="/assets/img/cars/2018.jpg"></a></div>
                             <div class="col-lg-7">
                                 <h3>2020 IC</h3>
                                 <p>In addition to our electric vehicle, Columbia University Formula Racing is also continuing its legacy of building ICE cars. We are currently preparing to compete again in FSAE Michigan and are excited for another fun and educational year of building racecars!</p>
@@ -73,7 +73,7 @@
                 <div class="block-content">
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><a href="/cars/2019"><img class="2019" src="/assets/img/cars/IC-1.jpg"></a></div>
+                            <div class="col-lg-5"><a href="/cars/2019"><img class="rounded img-fluid" src="/assets/img/cars/IC-1.jpg"></a></div>
                             <div class="col-lg-7">
                                 <h3>2019</h3>
                                 <p>Overall Dimensions:</p>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><a href="/cars/2018"><img class="2018" src="/assets/img/cars/2018.jpg"></a></div>
+                            <div class="col-lg-5"><a href="/cars/2018"><img class="rounded img-fluid" src="/assets/img/cars/2018.jpg"></a></div>
                             <div class="col-lg-7">
                                 <h3>2018</h3>
                                 <p>Overall Dimensions:</p>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><a href="/cars/2016"><img class="2016" src="/assets/img/cars/2016-2.jpg"></a></div>
+                            <div class="col-lg-5"><a href="/cars/2016"><img class="rounded img-fluid" src="/assets/img/cars/2016-2.jpg"></a></div>
                             <div class="col-lg-7">
                                 <h3>2016</h3>
                                 <p>Overall Dimensions: THIS INFO IS WRONG</p>
