--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <div data-aos="fade" data-aos-duration="1200" class="block-heading" style="margin-bottom: 84px;padding-bottom: 20px;">
                     <h2 class="text-dark" style="margin-top: 5%;">Welcome!</h2>
-                    <p style="margin-bottom: 3%;">Building excellent racecars every year takes a variety of skill sets, so there's a place for anyone and everyone on this team. We hope you can join us this year to give us your unique contribution</p>
+                    <p style="margin-bottom: 3%;">Building excellent racecars every year takes a variety of skill sets, so there's a place for anyone and everyone on this team. We hope you can join us this year to give us your unique contributions!</p>
                 </div>
                 <div class="row align-items-center" data-aos="fade" data-aos-duration="1200" data-aos-delay="200">
                     
