--- a/join/index.html
+++ b/join/index.html
@@ -57,8 +57,8 @@
             </div>
 	    
 	
-      <button onclick="window.location.href = 'https://w3docs.com';">Click Here</button>
-  
+      <button onclick="window.location.href = 'https://teespring.com/stores/cu-formula-racing';">Purchase Merch</button>
+      <button onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSchlaHOHzEVTO5kwLk5G93z-KQ83OUFIfET-BzSoCByOb5Y2g/viewform';">Join us</button>
 		
 	   <style type="text/css">
 	#mc_embed_signup{background-color: rgb(255,255,255,0); clear:left; font:14px; }
