--- a/join/index.html
+++ b/join/index.html
@@ -36,7 +36,8 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="/join/">JOIN</a></li>
-                </ul>
+               	    <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="/merch/">MERCH</a></li>
+		</ul>
             </div>
         </div>
     </nav>
@@ -57,9 +58,7 @@
             </div>
 	    
 	
-      <button onclick="window.location.href = 'https://teespring.com/stores/cu-formula-racing';">Purchase Merch</button>
-      <button onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSchlaHOHzEVTO5kwLk5G93z-KQ83OUFIfET-BzSoCByOb5Y2g/viewform';">Join us</button>
-		
+      
 	   <style type="text/css">
 	#mc_embed_signup{background-color: rgb(255,255,255,0); clear:left; font:14px; }
 	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
