--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -30,11 +30,12 @@
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/" style="color: #e1e1e1;">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/" style="color: #e1e1e1;">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/join/">JOIN</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="/merch/">MERCH</a></li>
                 </ul>
             </div>
         </div>
