--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -23,16 +23,16 @@
     <link rel="stylesheet" href="/assets/css/smoothproducts.css">
     <link rel="stylesheet" href="/assets/css/Social-Icon--hover-effect.css">
 </head>
-
 <body>
+    
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="background-color: rgb(255,255,255);background-image: url(&quot;/assets/img/beautiful-color-ui-gradients-backgrounds-royal.png&quot;);opacity: 1;background-size: cover;background-position: center;">
         <div class="container"><a class="navbar-brand logo" href="/" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(207,207,207);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia University FSAE</a><button data-toggle="collapse"
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/" style="color: #e1e1e1;">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/" style="color: #e1e1e1;">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/join/">JOIN</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="/merch/">MERCH</a></li>
@@ -40,6 +40,7 @@
             </div>
         </div>
     </nav>
+    
     <main class="page gallery-page">
         <section class="clean-block clean-gallery dark">
             <div class="container">
