--- a/cars/index.html
+++ b/cars/index.html
@@ -50,7 +50,7 @@
                 <div class="block-content">
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><a href="/cars/2020-EV"><img class="rounded img-fluid" src="/assets/img/cars/IC-1.jpg"></a></div>
+                            <div class="col-lg-5"><a href="/cars/2020-EV"><img class="rounded img-fluid" src="/assets/img/cars/ev-1.jpg"></a></div>
                             <div class="col-lg-7">
                                 <h3>2020 EV</h3>
                                 <p>Columbia University Formula Racing is excited to be introducing our first electric vehicle this year! After over a year of hard work, our team is looking forward to competing in the EV competition at FSAE North this summer of 2020. </p>
