--- a/cars/2020-EV/index.html
+++ b/cars/2020-EV/index.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/cars/ev-2.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/cars/ev-2.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title"></h4>
                                 <p class="card-text"></p>
