--- a/cars/2020-EV/index.html
+++ b/cars/2020-EV/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>2020-EV</title>
+    <title>2019 - Brand</title>
     <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
     <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
     <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
@@ -53,14 +53,6 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/cars/ev-2.JPG">
-                            <div class="card-body info">
-                                <h4 class="card-title"></h4>
-                                <p class="card-text"></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/cars/ev-3.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title"></h4>
@@ -68,13 +60,11 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/cars/ev-4.jpg" card-img-top w-100 d-block>
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/cars/ev-4.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title"></h4>
-                                <p class="card-text">&nbsp;</p>
+                                <p class="card-text"></p>
                             </div>
                         </div>
                     </div>
