--- a/cars/2020-IC/index.html
+++ b/cars/2020-IC/index.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>2020-EV</title>
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous">
+    <link rel="stylesheet" href="/assets/css/Dark-footer-with-social-media-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+    <link rel="stylesheet" href="/assets/css/smoothproducts.css">
+    <link rel="stylesheet" href="/assets/css/Social-Icon--hover-effect.css">
+</head>
+
+<body>
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="background-color: rgb(255,255,255);background-image: url(&quot;/assets/img/beautiful-color-ui-gradients-backgrounds-royal.png&quot;);opacity: 1;background-size: cover;background-position: center;">
+        <div class="container"><a class="navbar-brand logo" href="/" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(207,207,207);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia University FSAE</a><button data-toggle="collapse"
+                class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/" style="color: #e1e1e1;">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/join/">JOIN</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/merch/">MERCH</a></li>
+                    
+                </ul>
+            </div>
+        </div>
+    </nav>
+   
+  <p> Pictures coming soon! </p>
+    <footer class="page-footer dark" style="padding-bottom: 3px;">
+        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px;"><a class="border-dark social-link" href="https://www.facebook.com/ColumbiaFSAE/" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a><a class="border-dark social-link"
+                href="https://www.instagram.com/columbia_fsae/?igshid=svjts1w844oy" style="margin: 0px 5px;"><i class="fa fa-instagram social-link-icon"></i></a></div>
+        <div class="footer-copyright">
+            <p>© 2019 Copyright Columbia University FSAE</p>
+        </div>
+    </footer>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+    <script src="/assets/js/smoothproducts.min.js"></script>
+    <script src="/assets/js/theme.js"></script>
+    <script src="/assets/js/bs-animation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+</body>
+
+</html>
 
