--- a/cars/index.html
+++ b/cars/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><a href="/cars/2020-IC"><img class="rounded img-fluid" src="/assets/img/cars/2018.jpg"></a></div>
+                            <div class="col-lg-5"><a href="/cars/2020-IC"><img class="rounded img-fluid" src="/assets/img/cars/2019-4.jpg"></a></div>
                             <div class="col-lg-7">
                                 <h3>2020 IC</h3>
                                 <p>In addition to our electric vehicle, Columbia University Formula Racing is also continuing its legacy of building ICE cars. We are currently preparing to compete again in FSAE Michigan and are excited for another fun and educational year of building racecars!</p>
