--- a/cars/index.html
+++ b/cars/index.html
@@ -54,6 +54,7 @@
                             <div class="col-lg-7">
                                 <h3>2019-2020 EV</h3>
                                 <p>Columbia University Formula Racing is excited to be introducing our first electric vehicle this year! After over a year of hard work, our team is looking forward to competing in the EV competition at FSAE North this summer of 2020. </p>
+                                <button class="btn btn-outline-light text-black-50" type="button"><a class="text-white" href="https://forms.gle/NNNhkBxCukYZ5zoz7" style="color: rgba(255,255,255,0.8);opacity: 1;">Gallery</a></button>
                             </div>
                         </div>
                     </div>
