--- a/cars/index.html
+++ b/cars/index.html
@@ -54,7 +54,7 @@
                             <div class="col-lg-7">
                                 <h3>2019-2020 EV</h3>
                                 <p>Columbia University Formula Racing is excited to be introducing our first electric vehicle this year! After over a year of hard work, our team is looking forward to competing in the EV competition at FSAE North this summer of 2020. </p>
-                                <button class="btn btn-outline-dark text-black-50" type="button"><a class="text-white" href="cars/2020-EV" style="color: rgba(9,68,72,0.8);opacity: 1;">Gallery</a></button>
+                                <button class="btn btn-outline-dark text-black-50" type="button"><a class="text-white" href="/2020-EV" style="color: rgba(9,68,72,0.8);opacity: 1;">Gallery</a></button>
                             </div>
                         </div>
                     </div>
