--- a/cars/index.html
+++ b/cars/index.html
@@ -54,7 +54,7 @@
                             <div class="col-lg-7">
                                 <h3>2019-2020 EV</h3>
                                 <p>Columbia University Formula Racing is excited to be introducing our first electric vehicle this year! After over a year of hard work, our team is looking forward to competing in the EV competition at FSAE North this summer of 2020. </p>
-                                <button class="btn btn-outline-dark text-black-50" type="button"><a class="text-black" href="/cars/2020-EV" style="color: rgba(9,68,72,0.8);opacity: 1;">Gallery</a></button>
+                                <button class="btn btn-outline-dark text-black-50" type="button"><a class="" href="/cars/2020-EV" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
                             </div>
                         </div>
                     </div>
@@ -64,7 +64,7 @@
                             <div class="col-lg-7">
                                 <h3>2019-2020 IC</h3>
                                 <p>In addition to our electric vehicle, Columbia University Formula Racing is also continuing its legacy of building ICE cars. We are currently preparing to compete again in FSAE Michigan and are excited for another fun and educational year of building racecars!</p>
-                                <button class="btn btn-outline-dark text-black-50" type="button"><a class="text-white" href="/cars/2020-IC" style="color: rgba(9,68,72,0.8);opacity: 1;">Gallery</a></button>
+                                <button class="btn btn-outline-dark text-black-50" type="button"><a class="" href="/cars/2020-IC" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
                             </div>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                                 <p>Height: 1099 mm</p>
                                 <p>Weight: 450 kg</p>
                                 <p>Weight Distribution: 45% front</p>
-                                <button class="btn btn-outline-dark text-black-50" type="button"><a class="text-white" href="/cars/2019" style="color: rgba(9,68,72,0.8);opacity: 1;">Gallery</a></button>
+                                <button class="btn btn-outline-dark text-black-50" type="button"><a class="" href="/cars/2019" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
                             </div>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                                 <p>Height: 1130 mm</p>
                                 <p>Weight: 214 kg</p>
                                 <p>Weight Distribution: 48% front </p>
-                                <button class="btn btn-outline-dark text-black-50" type="button"><a class="text-white" href="/cars/2018" style="color: rgba(9,68,72,0.8);opacity: 1;">Gallery</a></button>
+                                <button class="btn btn-outline-dark text-black-50" type="button"><a class="" href="/cars/2018" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
                             </div>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                             <div class="col-lg-5"><a href="/cars/2016"><img class="rounded img-fluid" src="/assets/img/cars/2016-2.jpg"></a></div>
                             <div class="col-lg-7">
                                 <h3>2015-2016 IC</h3>
-                                <button class="btn btn-outline-dark text-black-50" type="button"><a class="text-white" href="/cars/2017" style="color: rgba(9,68,72,0.8);opacity: 1;">Gallery</a></button>
+                                <button class="btn btn-outline-dark text-black-50" type="button"><a class="" href="/cars/2017" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
                             </div>
                         </div>
                     </div>
