--- a/about-us/index.html
+++ b/about-us/index.html
@@ -51,25 +51,25 @@
             <div class="container-fluid text-center" data-aos="fade" data-aos-duration="1000" style="padding-bottom: 50px;">
                 <figure class="figure" style="margin-right: 40px;"><img class="img-fluid figure-img" src="/assets/img/icons8-steering_wheel.png">
                     <figcaption class="figure-caption"><strong>Controls</strong></figcaption>
-                    <figcaption class="figure-caption" style="width: 200px;">Assesses the team's ability to compile a business case arguing that their car best serves the needs of the amateur racing market.</figcaption>
+                    <figcaption class="figure-caption" style="width: 200px;">The cockpit/controls subteam is responsible for the pedal box, seat, and driver controls of both vehicles.</figcaption>
                 </figure>
                 <figure class="figure" style="padding-right: 0px;padding-left: 0px;margin-right: 40px;"><img class="img-fluid figure-img" src="/assets/img/icons8-f1_race_car_top_veiw.png" style="margin-right: -3px;padding-left: 0px;">
                     <figcaption class="figure-caption" style="padding-left: 0px;"><strong>Dynamics</strong></figcaption>
-                    <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">Assesses the team's ability to compile a business case arguing that their car best serves the needs of the amateur racing market.</figcaption>
+                    <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">The Dynamics subteam is comprised of the suspension, brakes, steering, hubs/uprights, and drivetrain systems of both the electric and internal combustion vehicles.</figcaption>
                 </figure>
                 <figure class="figure" style="padding-left: 0px;"><img class="img-fluid figure-img" src="/assets/img/icons8-washer_fluid.png" style="padding-left: 0px;">
                     <figcaption class="figure-caption" style="padding-left: 0px;"><strong>Fluids</strong></figcaption>
-                    <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">Assesses the team's ability to compile a business case arguing that their car best serves the needs of the amateur racing market.</figcaption>
+                    <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">The Fluids subteam is comprised of the engine, intake, and exhaust systems on the combustion vehicle and the cooling and aerodynamics systems on both vehicles.</figcaption>
                 </figure>
             </div>
             <div class="container-fluid text-center" data-aos="fade" data-aos-duration="1000" data-aos-delay="200" style="padding-bottom: 100px;">
                 <figure class="figure" style="margin-right: 40px;"><img class="img-fluid figure-img" src="/assets/img/icons8-recharge_battery.png">
                     <figcaption class="figure-caption"><strong>High Voltage</strong></figcaption>
-                    <figcaption class="figure-caption" style="width: 200px;">Assesses the team's ability to compile a business case arguing that their car best serves the needs of the amateur racing market.</figcaption>
+                    <figcaption class="figure-caption" style="width: 200px;">Responsible for the high-voltage circuit of the electric vehicle.</figcaption>
                 </figure>
                 <figure class="figure" style="padding-right: 0px;padding-left: 0px;margin-right: 40px;"><img class="img-fluid figure-img" src="/assets/img/icons8-electronics.png" style="margin-right: -3px;padding-left: 0px;">
                     <figcaption class="figure-caption" style="padding-left: 0px;"><strong>Low Voltage</strong></figcaption>
-                    <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">Assesses the team's ability to compile a business case arguing that their car best serves the needs of the amateur racing market.</figcaption>
+                    <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">Responsible for the low-voltage circuit of both vehicles, along with data logging and management.</figcaption>
                 </figure>
                 <figure class="figure" style="padding-left: 0px;"><img class="img-fluid figure-img" src="/assets/img/icons8-business.png" style="padding-left: 0px;">
                     <figcaption class="figure-caption" style="padding-left: 0px;"><strong>Business</strong></figcaption>
