--- a/join/index.html
+++ b/join/index.html
@@ -36,7 +36,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="/join/">JOIN</a></li>
-               	    <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="/merch/">MERCH</a></li>
+               	    <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="columbia-fsae.github.io">MERCH</a></li>
 		</ul>
             </div>
         </div>
