--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -50,7 +50,7 @@
                     <p>We couldn't have done this without these companies' generous support!</p>
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" data-aos-delay="500">
-                    <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="/assets/img/scenery/image1.jpg"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/home-logo.png" style="background-color: rgba(255,255,255,0);"></a></div>
+                    <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="/assets/img/scenery/image1.jpg"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/home-logo.png" style="background-color: rgba(255,255,255,0); height: 108px;"></a></div>
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.gurit.com/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/gurit.svg" style="background-color: rgba(255,255,255,0);"></a></div>
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.arch.columbia.edu/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/tag-columbia-gsapp.png" style="background-color: rgba(255,255,255,0);"></a></div>
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.trelleborg.com/en"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/Trelleborg-logo-5FF396A3DE-seeklogo.com.png" style="background-color: rgba(255,255,255,0);"></a></div>
@@ -91,10 +91,8 @@
         </section>
     </main>
     <footer class="page-footer dark" style="padding-bottom: 3px;">
-        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px; width: 40%"><a class="border-dark social-link" href="https://www.facebook.com/ColumbiaFSAE/" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a></a><a class="border-dark social-link"
-                href="https://www.instagram.com/columbia_fsae/?igshid=svjts1w844oy" style="margin: 0px 5px;"><i class="fa fa-instagram social-link-icon"></i><a class="border-dark social-link" href="https://twitter.com/ColumbiaFSAE?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" style="margin: 0px 5px;">
-        <i class="fa fa-twitter social-link-icon"></i></a>
-        </a></div>
+        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px; width: 40%"><a class="border-dark social-link" href="https://www.facebook.com/ColumbiaFSAE/" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a><a class="border-dark social-link"
+                href="https://www.instagram.com/columbia_motorsports/" style="margin: 0px 5px;"><i class="fa fa-instagram social-link-icon"></i></a></div>
         <div class="footer-copyright">
             <p>© 2019 Copyright Columbia University FSAE</p>
         </div>
