--- a/about-us/index.html
+++ b/about-us/index.html
@@ -186,8 +186,10 @@
         </section>
     </main>
     <footer class="page-footer dark" style="padding-bottom: 3px;">
-        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px; width: 40%"><a class="border-dark social-link" href="https://www.facebook.com/ColumbiaFSAE/" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a><a class="border-dark social-link"
-                href="https://www.instagram.com/columbia_fsae/?igshid=svjts1w844oy" style="margin: 0px 5px;"><i class="fa fa-instagram social-link-icon"></i></a></div>
+        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px; width: 40%"><a class="border-dark social-link" href="https://www.facebook.com/ColumbiaFSAE/" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a></a><a class="border-dark social-link"
+                href="https://www.instagram.com/columbia_fsae/?igshid=svjts1w844oy" style="margin: 0px 5px;"><i class="fa fa-instagram social-link-icon"></i><a class="border-dark social-link" href="https://twitter.com/ColumbiaFSAE?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" style="margin: 0px 5px;">
+        <i class="fa fa-twitter social-link-icon"></i></a>
+        </a></div>
         <div class="footer-copyright">
             <p>© 2019 Copyright Columbia University FSAE</p>
         </div>
