--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/join/">JOIN</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="/merch/">MERCH</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/join/" style="color: #e1e1e1;">JOIN</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="https://teespring.com/stores/cu-formula-racing" style="color: #e1e1e1;">MERCH</a></li>
                 </ul>
             </div>
         </div>
