--- a/about-us/index.html
+++ b/about-us/index.html
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                 </div>
-                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2020-EV';"><a class="" href="/cars/2020-EV" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
+                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = 'https://drive.google.com/file/d/1WDcN9LakRaJkpoiWkzgGXgMe6bGrA13T/view?usp=sharing';"><a class="" href="https://drive.google.com/file/d/1WDcN9LakRaJkpoiWkzgGXgMe6bGrA13T/view?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
             </div>
             
         </section>
