--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -22,6 +22,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="/assets/css/smoothproducts.css">
     <link rel="stylesheet" href="/assets/css/Social-Icon--hover-effect.css">
+<style>
+    #cent {
+        display: flex;
+        justify-content: center;
+    }
+
+    #cent div {
+        width: 70px;
+        height: 70px;
+    }
+    </style>
 </head>
 <body>
     
@@ -61,7 +72,7 @@
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.brembo.com/en/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/sponsors/brembo 520x240.jpg" style="background-color: rgba(255,255,255,0); background-size: auto;background-position: center;"></a></div>                 
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://us.misumi-ec.com/?gclid=EAIaIQobChMI16uWocOm5QIVConICh0Q6wNNEAAYASAAEgLxHfD_BwE"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/sponsors/RGB_Main_Horizontal-CLEAR.png" style="background-color: rgba(255,255,255,0);"></a></div>               
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.motec.com.au/home"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/sponsors/ezgif.com-webp-to-png.png" style="background-color: rgba(255,255,255,0); background-size: auto;background-position: center;"></a></div>          
-                    <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.oscaro.com/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/sponsors/oscaro.svg" style="background-color: rgba(255,255,255,0); background-size: auto;background-position: center;"></a></div>                   
+                    <div id = "cent"><div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.oscaro.com/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/sponsors/oscaro.svg" style="background-color: rgba(255,255,255,0); background-size: auto;background-position: center;"></a></div>                   
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.skf.com/us/index.html"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/sponsors/skf_logo.ai-converted.png" style="background-color: rgba(255,255,255,0); background-size: auto;background-position: center;"></a></div>                    
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.ansys.com/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/sponsors/ANSYS_logo.png" style="background-color: rgba(255,255,255,0); background-size: auto;background-position: center;"></a></div>                    
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.aviaid.com/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/sponsors/aviaid_logo.jpg" style="background-color: rgba(255,255,255,0); background-size: auto;background-position: center;"></a></div>                    
