--- a/cars/index.html
+++ b/cars/index.html
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-dark">Current Cars</h2>
-                    <p>Each year, we dedicate ourselves to push the limits of performance and build the next generation of racecars. Explore our past vehicles below.<br></p>
+                    <p>Each year, we dedicate ourselves to push the limits of performance and build the next generation of racecars. Explore our vehicles below.<br></p>
                 </div>
                 <div class="block-content">
                     <div class="clean-blog-post">
