--- a/join/index.html
+++ b/join/index.html
@@ -45,7 +45,7 @@
         <section class="clean-block clean-form dark" style="margin-top: -82px;">
             <div class="container">
                 <div class="block-heading" style="margin-top: -43px;"><img data-aos="fade" data-aos-duration="850" src="/assets/img/61072811_10158062997343561_7260407403730960384_o.jpeg" style="width: 100%;padding-bottom: 50px;">
-                    <p style="font-size: 16.5px;margin-bottom: 2%;">We are always looking for new members and sponsors! If you are interested in learning more about us or supporting our team, contact us at columbiafsae@gmail.com!</p>
+                    <p style="font-size: 16.5px;margin-bottom: 2%;">We are always looking for new members and sponsors! If you are interested in learning more about us or supporting our team, contact us via social media or email columbiafsae@gmail.com!</p>
                     <p style="font-size: 16.5px;">Visit us:&nbsp;</p>
                     <p>- Go to Mudd, take the stairs to the basement</p>
                     <p>- Take the hallway to the right</p>
