--- a/join/index.html
+++ b/join/index.html
@@ -47,10 +47,11 @@
                 <div class="block-heading" style="margin-top: -43px;"><img data-aos="fade" data-aos-duration="850" src="/assets/img/61072811_10158062997343561_7260407403730960384_o.jpeg" style="width: 100%;padding-bottom: 50px;">
                     <p style="font-size: 16.5px;margin-bottom: 2%;">We are always looking for new members and sponsors! If you are interested in learning more about us or supporting our team, contact us via social media or email columbiafsae@gmail.com!</p>
                     <p style="font-size: 16.5px;">Visit us:&nbsp;</p>
+		    <p>- We are located in the basement of Mudd at 500 W 120th St, New York, NY 10027</p>
                     <p>- Go to Mudd, take the stairs to the basement</p>
                     <p>- Take the hallway to the right</p>
                     <p>- Turn right, away from the elevator</p>
-                    <p style="padding-bottom: 26px;">- Pass through the first set of double doors and turn right again. Head to the end of the hallway</p>
+                    <p style="padding-bottom: 26px;">- Pass through the first set of double doors and turn right again; head to the end of the hallway</p>
                 </div>
                 
           
