--- a/about-us/index.html
+++ b/about-us/index.html
@@ -182,7 +182,8 @@
                         </div>
                     </div>
                 </div>
-                 <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://drive.google.com/file/d/1WDcN9LakRaJkpoiWkzgGXgMe6bGrA13T/view?usp=sharing';"><a class="" href="https://drive.google.com/file/d/1WDcN9LakRaJkpoiWkzgGXgMe6bGrA13T/view?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
+                 <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://drive.google.com/file/d/1BjKZwi5HQP3PEfAnkx4eO1iRsZJuiEEV/view?usp=sharing';"><a class="" href="https://drive.google.com/file/d/1BjKZwi5HQP3PEfAnkx4eO1iRsZJuiEEV/view?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
+                  <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://drive.google.com/file/d/1Ag-sIMWCmc28a1_pcoi45nubRra78UTf/view?usp=sharing';"><a class="" href="https://drive.google.com/file/d/1Ag-sIMWCmc28a1_pcoi45nubRra78UTf/view?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Conduct Guidelines</a></button>
             </div>
             
         </section>
