--- a/about-us/index.html
+++ b/about-us/index.html
@@ -116,7 +116,7 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Jon_Katz-min.JPG">
                             <div class="card-body info">
-                                <h4 class="card-title">Jon Katz</h4>
+                                <h4 class="card-title">Denis Profka</h4>
                                 <p class="card-text">Assistant Chief of Fluids</p>
                             </div>
                         </div>
