--- a/about-us/index.html
+++ b/about-us/index.html
@@ -85,7 +85,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Browne.jpg">
                             <div class="card-body info">
-                                <h4 class="card-title">Josh Browne</h4>
+                                
+                                <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = 'https://www.earth.columbia.edu/articles/view/2758';"><a class="" href="https://www.earth.columbia.edu/articles/view/2758" style="color: rgba(0,0,0,1);opacity: 1;">Josh Browne</a></button>
                                 <p class="card-text">Mechanical Engineering</p>
                             </div>
                         </div>
