--- a/about-us/index.html
+++ b/about-us/index.html
@@ -85,7 +85,7 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Browne.jpg">
                             <div class="card-body info">
-                                
+                                <br></br>
                                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = 'https://www.earth.columbia.edu/articles/view/2758';"><a class="" href="https://www.earth.columbia.edu/articles/view/2758" style="color: rgba(0,0,0,1);opacity: 1;">Josh Browne</a></button>
                                 <p class="card-text">Mechanical Engineering</p>
                             </div>
@@ -94,7 +94,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Kysar.jpg">
                             <div class="card-body info">
-                                <h4 class="card-title">Jeffrey Kysar</h4>
+                                <br></br>
+                                <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = 'https://me.columbia.edu/faculty/jeffrey-kysar';"><a class="" href="https://me.columbia.edu/faculty/jeffrey-kysar" style="color: rgba(0,0,0,1);opacity: 1;">Jeffrey Kysar</a></button>
                                 <p class="card-text">Professor and Chair of Mechanical Engineering</p>
                             </div>
                         </div>
@@ -102,7 +103,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Preindl.jpeg">
                             <div class="card-body info">
-                                <h4 class="card-title">Matthias Preindl</h4>
+                                <br></br>
+                                <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = 'https://www.ee.columbia.edu/matthias-preindl';"><a class="" href="https://www.ee.columbia.edu/matthias-preindl" style="color: rgba(0,0,0,1);opacity: 1;">Matthias Preindl</a></button>
                                 <p class="card-text">Assistant Professor in Electrical Engineering</p>
                             </div>
                         </div>
