--- a/about-us/index.html
+++ b/about-us/index.html
@@ -88,7 +88,6 @@
                                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = 'https://www.earth.columbia.edu/articles/view/2758';"><a class="" href="https://www.earth.columbia.edu/articles/view/2758" style="color: rgba(0,0,0,1);opacity: 1;">Josh Browne</a></button>
                                 <br></br>
                                 <p class="card-text">Columbia University</p>
-                                <br></br>
                                 <p class="card-text">Mechanical Engineering</p>
                             </div>
                         </div>
@@ -98,6 +97,7 @@
                             <div class="card-body info">
                                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = 'https://me.columbia.edu/faculty/jeffrey-kysar';"><a class="" href="https://me.columbia.edu/faculty/jeffrey-kysar" style="color: rgba(0,0,0,1);opacity: 1;">Jeffrey Kysar</a></button>
                                 <br></br>
+                                <p class="card-text">Columbia University</p>
                                 <p class="card-text">Professor and Chair of Mechanical Engineering</p>
                             </div>
                         </div>
@@ -107,6 +107,7 @@
                             <div class="card-body info">
                                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = 'https://www.ee.columbia.edu/matthias-preindl';"><a class="" href="https://www.ee.columbia.edu/matthias-preindl" style="color: rgba(0,0,0,1);opacity: 1;">Matthias Preindl</a></button>
                                 <br></br>
+                                <p class="card-text">Columbia University</p>
                                 <p class="card-text">Assistant Professor in Electrical Engineering</p>
                             </div>
                         </div>
