--- a/about-us/index.html
+++ b/about-us/index.html
@@ -243,8 +243,8 @@
                         </div>
                     </div>
                 </div>
-                 <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://drive.google.com/file/d/1BjKZwi5HQP3PEfAnkx4eO1iRsZJuiEEV/view?usp=sharing';"><a class="" href="https://drive.google.com/file/d/1BjKZwi5HQP3PEfAnkx4eO1iRsZJuiEEV/view?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
-                  <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://drive.google.com/file/d/1Ag-sIMWCmc28a1_pcoi45nubRra78UTf/view?usp=sharing';"><a class="" href="https://drive.google.com/file/d/1Ag-sIMWCmc28a1_pcoi45nubRra78UTf/view?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Conduct Guidelines</a></button>
+                 <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://docs.google.com/document/d/1qtSutZgiMmXyMW8FwmeXft0TfNtKqwPFRBRjtU2p7Ik/edit?usp=sharing';"><a class="" href="https://docs.google.com/document/d/1qtSutZgiMmXyMW8FwmeXft0TfNtKqwPFRBRjtU2p7Ik/edit?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
+                  <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://docs.google.com/document/d/1JW7P3AnJqlKNdxfa4Hs2y4-sC18wKMizDVfpeS_t3Qs/edit?usp=sharing';"><a class="" href="https://docs.google.com/document/d/1JW7P3AnJqlKNdxfa4Hs2y4-sC18wKMizDVfpeS_t3Qs/edit?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Conduct Guidelines</a></button>
             </div>
             
         </section>
