--- a/about-us/index.html
+++ b/about-us/index.html
@@ -79,15 +79,15 @@
            <div class="container-fluid text-center" data-aos="fade" data-aos-duration="1000" data-aos-delay="200" style="padding-bottom: 100px;">
                 <figure class="figure" style="margin-right: 40px;"><img class="img-fluid figure-img" src="/assets/img/icons8-recharge_battery.png">
                     <figcaption class="figure-caption"><strong> IT </strong></figcaption>
-                    <figcaption class="figure-caption" style="width: 200px;">IT team.</figcaption>
+                    <figcaption class="figure-caption" style="width: 200px;">The IT team is responsible for managing the club’s website and file storage system.</figcaption>
                 </figure>
                 <figure class="figure" style="padding-right: 0px;padding-left: 0px;margin-right: 40px;"><img class="img-fluid figure-img" src="/assets/img/icons8-electronics.png" style="margin-right: -3px;padding-left: 0px;">
                     <figcaption class="figure-caption" style="padding-left: 0px;"><strong>Sponsor team</strong></figcaption>
-                    <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">Sponsor team.</figcaption>
+                    <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">The Sponsorships subteam assists the External VP with sponsor research, outreach, and management.</figcaption>
                 </figure>
                 <figure class="figure" style="padding-left: 0px;"><img class="img-fluid figure-img" src="/assets/img/icons8-business.png" style="padding-left: 0px;">
                     <figcaption class="figure-caption" style="padding-left: 0px;"><strong>Social</strong></figcaption>
-                    <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">Social.</figcaption>
+                    <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">The social committee is overseen by the Social Chair and VP External to manage the club’s outward presence and promote team building.</figcaption>
                 </figure>
                 
                 
