--- a/about-us/index.html
+++ b/about-us/index.html
@@ -102,7 +102,7 @@
                                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = 'https://www.earth.columbia.edu/articles/view/2758';"><a class="" href="https://www.earth.columbia.edu/articles/view/2758" style="color: rgba(0,0,0,1);opacity: 1;">Josh Browne</a></button>
                                 <br></br>
                                 <p class="card-text">Columbia University</p>
-                                <p class="card-text">Mechanical Engineering</p>
+                                <p class="card-text">Adjunct Professor of Mechanical Engineering</p>
                             </div>
                         </div>
                     </div>
