--- a/about-us/index.html
+++ b/about-us/index.html
@@ -122,7 +122,7 @@
                                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = 'https://www.ee.columbia.edu/matthias-preindl';"><a class="" href="https://www.ee.columbia.edu/matthias-preindl" style="color: rgba(0,0,0,1);opacity: 1;">Matthias Preindl</a></button>
                                 <br></br>
                                 <p class="card-text">Columbia University</p>
-                                <p class="card-text">Assistant Professor in Electrical Engineering</p>
+                                <p class="card-text">Assistant Professor of Electrical Engineering</p>
                             </div>
                         </div>
                     </div>
