--- a/about-us/index.html
+++ b/about-us/index.html
@@ -254,6 +254,20 @@
             </div>
             
         </section>
+
+
+
+
+        <div class="container">
+                <div data-aos="fade" data-aos-duration="1000" class="block-heading"><img src="/assets/img/jvh.jpg" style="width: 60%;margin-top: -7%;">
+                    <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 5%;margin-top: 1%;">What can you do in FSAE?</h2>
+                    <p><strong>Formula SAE</strong>&nbsp;(Society of Automotive Engineers)&nbsp;is a series of international competitions in which university teams compete to design and manufacture the best performing racecars.</p>
+                </div>
+            </div>
+
+
+
+
     </main>
     <footer class="page-footer dark" style="padding-bottom: 3px;">
         <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px; width: 40%"><a class="border-dark social-link" href="https://www.facebook.com/ColumbiaFSAE/" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a></a><a class="border-dark social-link"
