--- a/about-us/index.html
+++ b/about-us/index.html
@@ -248,25 +248,18 @@
                         </div>
                 </div>
            </div>
-    
+           <div class="container">
+                <div data-aos="fade" data-aos-duration="1000" class="block-heading"><img src="/assets/img/jvh.jpg" style="width: 60%;margin-top: -7%;">
+                    <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 5%;margin-top: 1%;">Site Credits</h2>
+                    <p>Site credits go to Lalitha Madduri, Danielle Cai, Ivan Barrel, Anthony Ozerov, Chen Chen, and Tong Zhou</p>
+                </div>
+            </div>
+
                  <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://docs.google.com/document/d/1qtSutZgiMmXyMW8FwmeXft0TfNtKqwPFRBRjtU2p7Ik/edit?usp=sharing';"><a class="" href="https://docs.google.com/document/d/1qtSutZgiMmXyMW8FwmeXft0TfNtKqwPFRBRjtU2p7Ik/edit?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
                   <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://docs.google.com/document/d/1JW7P3AnJqlKNdxfa4Hs2y4-sC18wKMizDVfpeS_t3Qs/edit?usp=sharing';"><a class="" href="https://docs.google.com/document/d/1JW7P3AnJqlKNdxfa4Hs2y4-sC18wKMizDVfpeS_t3Qs/edit?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Conduct Guidelines</a></button>
             </div>
             
         </section>
-
-
-
-
-        <div class="container">
-                <div data-aos="fade" data-aos-duration="1000" class="block-heading"><img src="/assets/img/jvh.jpg" style="width: 60%;margin-top: -7%;">
-                    <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 5%;margin-top: 1%;">What can you do in FSAE?</h2>
-                    <p><strong>Formula SAE</strong>&nbsp;(Society of Automotive Engineers)&nbsp;is a series of international competitions in which university teams compete to design and manufacture the best performing racecars.</p>
-                </div>
-            </div>
-
-
-
 
     </main>
     <footer class="page-footer dark" style="padding-bottom: 3px;">
