--- a/about-us/index.html
+++ b/about-us/index.html
@@ -249,8 +249,9 @@
                 </div>
            </div>
            <div class="container">
+               <div>
                     <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 5%;margin-top: 1%;">Site Credits</h2>
-                    <p>Site credits go to Lalitha Madduri, Danielle Cai, Ivan Barrel, Anthony Ozerov, Chen Chen, and Tong Zhou</p>
+                    <p>Special thanks Lalitha Madduri, Danielle Cai, Ivan Barrel, Anthony Ozerov, Chen Chen, and Tong Zhou</p>
                 </div>
             </div>
 
