--- a/about-us/index.html
+++ b/about-us/index.html
@@ -253,7 +253,7 @@
             <div class="container">
                <div>
                     <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 5%;margin-top: 1%;">Site Credits</h2>
-                    <p>Special thanks Lalitha Madduri, Danielle Cai, Ivan Barrel, Anthony Ozerov, Chen Chen, and Tong Zhou</p>
+                    <p>Site contributors are Lalitha Madduri, Danielle Cai, Ivan Barrel, Chen Chen, Anthony Ozerov, and Tong Zhou. Special thanks to Lalitha for creating the foundation for the site.</p>
                 </div>
             </div>
     </div>
