--- a/about-us/index.html
+++ b/about-us/index.html
@@ -247,9 +247,15 @@
                             </div>
                         </div>
                 </div>
+               <div class="col-sm-6 col-lg-4" data-aos="fade">
+                         <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://docs.google.com/document/d/1qtSutZgiMmXyMW8FwmeXft0TfNtKqwPFRBRjtU2p7Ik/edit?usp=sharing';"><a class="" href="https://docs.google.com/document/d/1qtSutZgiMmXyMW8FwmeXft0TfNtKqwPFRBRjtU2p7Ik/edit?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
+                </div>
+               <div class="col-sm-6 col-lg-4" data-aos="fade">
+                        <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://docs.google.com/document/d/1JW7P3AnJqlKNdxfa4Hs2y4-sC18wKMizDVfpeS_t3Qs/edit?usp=sharing';"><a class="" href="https://docs.google.com/document/d/1JW7P3AnJqlKNdxfa4Hs2y4-sC18wKMizDVfpeS_t3Qs/edit?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Conduct Guidelines</a></button>
+                </div>
            </div>
-                 <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://docs.google.com/document/d/1qtSutZgiMmXyMW8FwmeXft0TfNtKqwPFRBRjtU2p7Ik/edit?usp=sharing';"><a class="" href="https://docs.google.com/document/d/1qtSutZgiMmXyMW8FwmeXft0TfNtKqwPFRBRjtU2p7Ik/edit?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
-                  <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://docs.google.com/document/d/1JW7P3AnJqlKNdxfa4Hs2y4-sC18wKMizDVfpeS_t3Qs/edit?usp=sharing';"><a class="" href="https://docs.google.com/document/d/1JW7P3AnJqlKNdxfa4Hs2y4-sC18wKMizDVfpeS_t3Qs/edit?usp=sharing" style="color: rgba(0,0,0,1);opacity: 1;">Conduct Guidelines</a></button>
+                
+                
             <div class="container">
                <div>
                     <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 5%;margin-top: 1%;">Site Credits</h2>
